Re-add arbitrary Atoms in Arbitrary Rad.Value
Now that we simplified the Arbitrary Rad.Value instance we were
getting a lot more collisions. This hopefully fixes it.

--- a/.weeder.yaml
+++ b/.weeder.yaml
@@ -59,6 +59,14 @@
           # BEGIN debug functions
           - props
           # END debug functions
+      - module:
+        - name: Oscoin.Test.Crypto.PubKey.Arbitrary
+        - identifier:
+          # BEGIN false positives
+          - FRB
+          - FastRandomBytes
+          - withFastRandomBytes
+          # END debug functions
 - package:
   - name: oscoin
   - section:
