Introduce the Oscoin.Protocol (#407)
* Rename validateBlock and validateBlock'

This commit renames those two functions into 'validateBasic' and
'validateFull', which is more descriptive of what these two functions
are actually doing.

* Replace AuthTree.Internal imports with .Class ones

This commit bumps the avl-tree library so that we imports the typeclass
from a .Class module and not from an .Internal module anymore.

* Add the BlockCache data structure

This commit adds a very simple BlockCahe data structure which uses a
circular sequence under the hood.

* Perform full validation for chains before switching.

This commit ensures that we perform full extrinsic validation before
switching to a better chain.

* Use the BlockCache in getBlocks

This commit should hopefully speed-up getBlocks via an in-memory cache.

The rationale is that we need frequent calls to 'getBlocks' to geth the
"mutable part of the chain" during chain selection.

* Rename 'StorageManager' into 'Protocol'.

It seems to be more fitting in the current architecture.

* WIP. Split the BlockStore into public & private.

This commit split the blockstore API into its public & private
components, so that the 'Protocol' data structure is the only one
capable of calling 'insertBlock' and 'switchToFork'.

* Fix the test suite

* Weeder & hlint

* Review: rename BlockStore

This commit renames `FullBlockStoreAPI` into simply `BlockStore`, and
its public/private API into Reader/Writer.

* Address most of Thomas' review comments

* Address Kim's review comments.

Introduce a new design which doesn't directly couple the Protocol with a
TBQueue, makes things less stateful and relax the dependency of the
miner on the queue itself.

* Weed redundant deps

* Randomise executable tests a bit more

This commit makes the gossip port for the executable tests random, plus
it switch to use a monadic Property, so that, in case of failure, we get
a reprodu

--- a/package.yaml
+++ b/package.yaml
@@ -12,7 +12,6 @@ dependencies:
 
 data-files:
   - data/blockstore.sql
-  - data/config.yaml
   - data/genesis.yaml
 
 flags:
@@ -81,7 +80,7 @@ library:
     - tagged
     - text
     - transformers
-    - unordered-containers
+    - vector
     - wai
     - wai-middleware-static
     - writer-cps-mtl
