--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -29,6 +29,7 @@
 - warn: {lhs: map (const ()), rhs: void}
 
 - ignore: {name: Use map, within: [Crypto.Data.Auth.Tree.Proof]}
+- ignore: {name: Use map, within: [Data.Sequence.Circular]}
 - ignore: {name: Collapse lambdas}
 
 - ignore: {name: Reduce duplication}
