--- a/.weeder.yaml
+++ b/.weeder.yaml
@@ -17,6 +17,13 @@
         - identifier:
           # BEGIN false positives
           - liftTestNodeT
+          - stepTestProtocol
+          # END false positives
+      - module:
+        - name: Oscoin.Test.Crypto.Blockchain.Block.Arbitrary
+        - identifier:
+          # BEGIN false positives
+          - arbitraryBlockWith
           # END false positives
       - module:
         - name: Oscoin.Test.P2P.IO
