Use the `Managed` CPS transform to untangle the brackets in node/Main

--- a/package.yaml
+++ b/package.yaml
@@ -94,6 +94,7 @@ executables:
       ld-options: -static
     dependencies:
       - async
+      - managed
       - network
       - optparse-applicative
       - oscoin
