--- a/package.yaml
+++ b/package.yaml
@@ -102,6 +102,7 @@ executables:
       - yaml
     ghc-options:
       - -with-rtsopts=-T
+      - -threaded
 
   oscoin-cli:
     main: exe/cli/Main.hs
