Explicitly tie the lifetime of the EKG server to the other main threads

--- a/package.yaml
+++ b/package.yaml
@@ -157,6 +157,7 @@ tests:
       - hedgehog
       - hedgehog-quickcheck
       - http-api-data
+      - http-client
       - http-media
       - http-types
       - iproute
