Simplify network simulation tests
After the simple consensus tests have been deleted it is now possible to
massively simplify the simulation tests.

--- a/package.yaml
+++ b/package.yaml
@@ -163,6 +163,7 @@ tests:
       - iproute
       - memory
       - microlens
+      - microlens-mtl
       - mtl
       - multihash-cryptonite
       - network
