Initial Address format for Oscoin (#431)
*  Make a start on the Address format

* Complete module first iteration

* Evaluate alternative compact schemas

Evaluate whether we should have a base58(hash(pk)) or simply a
hash(pk) for the AddressPayload.

* Introduce the ShortHash type

This commit introduces the ShortHash type, which is used for address
generation. For the real-world crypto this is RIPEMD160(Blake2b_256).

* Optimise Address serialisation

This commit optimises the address serialisation by skipping the
intermediate convertion into base58 after the call to 'shortHash'.

* Improve serialisation even further

This patch brings down the byte size for a typical Oscoin Address down
to roughly 45 bytes, by not encoding & decoding the prefix via CBOR.

* Minor documentation bump

* Rebase with master

* Add basic serialisation roundtrip test

* Use Bech32 checksum

* Small documentation fixup

* Remove intermediate CBOR layer

This commit follows Alexis' suggestion of not encoding the
AddressPayload via CBOR, but rather remove this intermediate encoding
step and simply concatenate to the serialised address prefix the
serialised hash of the PublicKey, in a similar fashion of what BTC does
as well.

* Restore correct .freeze, which went kaput

* Experiment with base32z encoding

* Test address tampering resistance

* Create an Address from a (Network, Environment) combo.

* Skip base58 encoding for AddressPayload.

* Adjust Address tests to the new module convention

* Add injectivity test

* Address review feedback

* Update src/Oscoin/Crypto/Address/Bech32.hs

Co-Authored-By: adinapoli-mndc <45846748+adinapoli-mndc@users.noreply.github.com>

* Adjust the haddock a bit

* Address code review feedback

--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,7 @@ library:
     - base16-bytestring
     - base58-bytestring
     - base64-bytestring
+    - z-base32-bytestring
     - binary
     - bytestring
     - cacophony >= 0.10.1
