--- a/cabal.project
+++ b/cabal.project
@@ -53,6 +53,10 @@ source-repository-package
   location: https://github.com/oscoin/ipfs
   tag: 30a67159d5b58cf63be903920d6349f0be15cd46
   subdir: multihash-serialise
+source-repository-package
+  type: git
+  location: https://github.com/oscoin/z-base32-bytestring
+  tag: 03f644fd2b88596a08a39c0a539cf22f856a3033
 
 package sandi
   flags: -with-conduit
