--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,7 +26,7 @@ steps:
       load-cache
 
   - id: "Build deps"
-    name: "haskell:8.6.3"
+    name: "eu.gcr.io/opensourcecoin/docker-haskell:8.6.4"
     env:
     - STACK_ROOT=/workspace/.stack
     entrypoint: "bash"
@@ -57,7 +57,7 @@ steps:
   - id: "Format (haskell)"
     waitFor:
     - Save cache
-    name: "haskell:8.6.3"
+    name: "eu.gcr.io/opensourcecoin/docker-haskell:8.6.4"
     env:
     - STACK_ROOT=/workspace/.stack
     args:
@@ -66,7 +66,7 @@ steps:
   - id: "Lint (hlint)"
     waitFor:
     - Save cache
-    name: "haskell:8.6.3"
+    name: "eu.gcr.io/opensourcecoin/docker-haskell:8.6.4"
     env:
     - STACK_ROOT=/workspace/.stack
     args: ["stack", "exec", "--", "hlint", "."]
@@ -74,7 +74,7 @@ steps:
   - id: "Test & Build"
     waitFor:
     - Save cache
-    name: "haskell:8.6.3"
+    name: "eu.gcr.io/opensourcecoin/docker-haskell:8.6.4"
     entrypoint: "bash"
     env:
     - STACK_ROOT=/workspace/.stack
@@ -101,7 +101,7 @@ steps:
   - id: "Lint (weeder)"
     waitFor:
     - Test & Build
-    name: "haskell:8.6.3"
+    name: "eu.gcr.io/opensourcecoin/docker-haskell:8.6.4"
     env:
     - STACK_ROOT=/workspace/.stack # weeder uses stack under the hood
     args: ["stack", "exec", "--", "weeder", "."]
