Expose metrics and health check endpoints. Make EKG optional.

--- a/package.yaml
+++ b/package.yaml
@@ -94,10 +94,13 @@ executables:
     dependencies:
       - async
       - containers
+      - http-types
       - managed
       - optparse-applicative
       - oscoin
       - semigroups
+      - wai
+      - warp
       - yaml
     ghc-options:
       - -with-rtsopts=-T
