--- a/data/genesis.yaml
+++ b/data/genesis.yaml
@@ -1,10 +1,11 @@
-hash: 2Drjgb71K6GBgwozNFndEAoFjE3nZEJiTyngPxrdK449dhDoGY
+hash: 2DrjgbCd1rxCgmw24kS8YxJeR9esBPCQdDZ3i29gWRwUt7Vkbw
 data: []
 header:
+  height: 0
   dataHash: 2Drjgb4FtifQz3pNjpYitXQVQXvVG3WBeub54JJnq438GFasNF
   targetDifficulty: ffff0021
   stateHash: 2DrjgbJVAd2Q9WQVZT1Vtam2hCNGZSefi5DwPJNbSaxWmuUypo
   seal: 0
-  timestamp: 1555593388744402434
+  timestamp: 1556090695611683221
   parentHash: 2Drjgb4FtifQz3pNjpYitXQVQXvVG3WBeub54JJnq438GFasNF
 
