--- a/package.yaml
+++ b/package.yaml
@@ -48,6 +48,8 @@ library:
     - filepath
     - formatting
     - generics-sop
+    - gogol
+    - gogol-compute
     - gossip
     - hashable
     - hostname
@@ -79,6 +81,8 @@ library:
     - stm >=2.4.5.0
     - text
     - transformers
+    - unliftio-core
+    - unordered-containers
     - vector
     - wai
     - wai-middleware-static
