Make (node) options invertible
i.e. render CLI options from a Options value

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -44,3 +44,7 @@
 - ignore: {name: Avoid reverse}
 - ignore: {name: Use print}
 - ignore: {name: Use camelCase}
+
+- ignore:
+    name: Avoid restricted qualification
+    within: [System.Console.Option]
