--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -84,19 +84,16 @@ steps:
     - |
       set -euo pipefail
 
-      if [ "$BRANCH_NAME" == "master" ]; then
-        stack build \
-          --test \
-          --flag=oscoin:static \
-          --no-terminal \
-          --pedantic \
-          --copy-bins \
-          --local-bin-path=/workspace/bin \
-          --haddock \
-          --exec="mv $(stack path --local-doc-root) api-docs"
-      else
-        stack build --test --no-terminal --pedantic
-      fi
+      stack build \
+        --test \
+        --flag=oscoin:static \
+        --no-terminal \
+        --pedantic \
+        --copy-bins \
+        --local-bin-path=/workspace/bin \
+        --haddock \
+        --no-haddock-deps \
+        --exec="mv $(stack path --local-doc-root) api-docs"
 
   - id: "Lint (weeder)"
     waitFor:
@@ -120,14 +117,12 @@ steps:
     - |
       set -euo pipefail
 
-      if [ "$BRANCH_NAME" == "master" ]; then
-        bins=(
-          /workspace/bin/oscoin
-          /workspace/bin/oscoin-cli
-        )
+      bins=(
+        /workspace/bin/oscoin
+        /workspace/bin/oscoin-cli
+      )
 
-        echo "$${bins[*]}" | xargs -P8 -n1 ./scripts/publish-image.sh
-      fi
+      echo "$${bins[*]}" | xargs -P8 -n1 ./scripts/publish-image.sh
 
   - id: "Publish Haddocks"
     waitFor:
@@ -142,6 +137,4 @@ steps:
     - |
       set -euxo pipefail
 
-      if [ "$BRANCH_NAME" == "master" ]; then
-        gsutil -m rsync -d -r api-docs gs://oscoin-apidocs/${COMMIT_SHA}
-      fi
+      gsutil -m rsync -d -r api-docs gs://oscoin-apidocs/${COMMIT_SHA}
