Add test for fetchBlockHeaders

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -48,3 +48,6 @@
 - ignore:
     name: Avoid restricted qualification
     within: [System.Console.Option]
+- ignore:
+    name: Avoid restricted qualification
+    within: [Oscoin.Protocol.Sync]
