Node syncing: Finalise IO data fetcher and add tests for the RealWord implementation (#594)
* Exception handling in case of HTTP errors
* Fix streaming for blocks
* Add tests for Sync IO
* Address code review comments

--- a/package.yaml
+++ b/package.yaml
@@ -90,6 +90,7 @@ library:
     - vector
     - wai
     - wai-middleware-static
+    - warp
     - writer-cps-mtl
     - yaml
 
@@ -193,6 +194,7 @@ tests:
       - serialise
       - sqlite-simple
       - splitmix
+      - stm
       - stm-conduit
       - streaming-commons
       - tasty >=1.0.0.1
