Always keep on discovering
If we run out of active peers after protocol bootstrap, try finding some
via disco (note that the gossip protocol might be able to recover, too).

Closes #442

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -47,7 +47,7 @@
 
 - ignore:
     name: Avoid restricted qualification
-    within: [System.Console.Option]
-- ignore:
-    name: Avoid restricted qualification
-    within: [Oscoin.Protocol.Sync]
+    within:
+    - Oscoin.P2P
+    - Oscoin.Protocol.Sync
+    - System.Console.Option
