Generate genesis block from parameters (#613)
Before this commit the node loaded the genesis block from a YAML file.
This required us to be able to serialise a whole block as YAML. Now the
node only loads the `GenesisParameters` from a YAML file and uses
the parameters to build the genesis block.

Conversely, we change the `genesis` command of the CLI to create these
`GenesisParameters` from command line arguments.

As a consequence we can remove a multitude of `ToJSON` and `FromJSON`
instances and close #602. Note that there still remain some instances
for example for `Crypto.ShortHash` that are not trivial to get rid of.

The change also makes it possible to build the genesis block for every
type of transaction (since the transaction set is empty). This closes #589.

--- a/data/genesis.yaml
+++ b/data/genesis.yaml
@@ -1,13 +1,5 @@
-hash: 2DrjgbEiCx2ZWa2ob5HgZMaDFTgaY1r2aFDRGbFQKzhJRnfkZK
-data:
-  txs: []
-  beneficiary: '0x0000000000000000000000000000000000000000'
-header:
-  height: 0
-  dataHash: 2DrjgbGEpqLFjKYwNp8hhAYt3KpK2GPgk8aLAvG3Joo454M9tb
-  targetDifficulty: ffff0021
-  stateHash: 2DrjgbJVAd2Q9WQVZT1Vtam2hCNGZSefi5DwPJNbSaxWmuUypo
-  seal: 0
-  timestamp: 1558543390487199604
-  parentHash: 2Drjgb4FtifQz3pNjpYitXQVQXvVG3WBeub54JJnq438GFasNF
+pow: 0
+startDifficulty: ffff0021
+beneficiary: '0x0000000000000000000000000000000000000000'
+timestamp: 1559041196429336548
 
