--- a/package.yaml
+++ b/package.yaml
@@ -104,6 +104,7 @@ executables:
     dependencies:
       - async
       - containers
+      - filepath
       - http-types
       - managed
       - optparse-applicative
