--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -174,15 +174,9 @@ steps:
       set -euo pipefail
 
       if [[ "$BRANCH_NAME" == "master" ]]; then
-        ./scripts/deploy/gce/node \
-            --log-level=Debug \
-            --no-log-colours \
-            --log-layout=NoLayout
+        ./scripts/deploy/gce/node --log-level=Debug
       else
-        DRY_RUN=yes ./scripts/deploy/gce/node \
-            --log-level=Debug \
-            --no-log-colours \
-            --log-layout=NoLayout
+        DRY_RUN=yes ./scripts/deploy/gce/node --log-level=Debug
       fi
 
   - id: "Publish Haddocks"
