Deployment: bump block-time-lower
Mining like crazy doesn't really help debugging on the server.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -174,9 +174,13 @@ steps:
       set -euo pipefail
 
       if [[ "$BRANCH_NAME" == "master" ]]; then
-        ./scripts/deploy/gce/node --log-level=Debug
+        ./scripts/deploy/gce/node \
+            --log-level=Debug \
+            --block-time-lower=60
       else
-        DRY_RUN=yes ./scripts/deploy/gce/node --log-level=Debug
+        DRY_RUN=yes ./scripts/deploy/gce/node \
+            --log-level=Debug \
+            --block-time-lower=60
       fi
 
   - id: "Publish Haddocks"
