--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -176,10 +176,12 @@ steps:
       if [[ "$BRANCH_NAME" == "master" ]]; then
         ./scripts/deploy/gce/node \
             --log-level=Debug \
+            --nakamoto-consensus-lenient \
             --block-time-lower=60
       else
         DRY_RUN=yes ./scripts/deploy/gce/node \
             --log-level=Debug \
+            --nakamoto-consensus-lenient \
             --block-time-lower=60
       fi
 
