Deployment: Fix versioning again
Short hash for instance template, full SHA1 otherwise

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -154,7 +154,8 @@ steps:
     env:
     - BRANCH_NAME=$BRANCH_NAME
 
-    - OSCOIN_VERSION=$SHORT_SHA
+    - OSCOIN_VERSION_SHORT=$SHORT_SHA
+    - OSCOIN_VERSION=$COMMIT_SHA
     - OSCOIN_NETWORK=devnet
     - OSCOIN_BENEFICIARY=0x0000000000000000000000000000000000000000
     - OSCOIN_GOSSIP_PORT=6942
